# vapar-exercise

./: .env.dev  .env.dev.example  .env.test.example  .gitignore  README.md  pyproject.toml
vapar_exercise/: app.py  config.py  dependencies.py  models.py  service.py
vapar_exercise/codegen/: github_list_repos_response.py
vapar_exercise/tests/: conftest.py  test_integration.py  test_service.py
